hphp/test/slow/hhbbc/uninit_var_capture.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: x' in %s/uninit_var_capture.php:4
Stack trace:
%A
